chore: fix tests